--- a/pages/options.css
+++ b/pages/options.css
@@ -1,5 +1,8 @@
-html, body {
-  font-family: 'DejaVu Sans', 'Helvetica Neue', 'Helvetica', 'Noto Sans UI', 'Segoe UI', 'Chrome Droid Sans', 'Droid Sans Fallback', 'Lucida Grande', 'Tahoma', sans-serif;
+html,
+body {
+  font-family: "DejaVu Sans", "Helvetica Neue", "Helvetica", "Noto Sans UI",
+    "Segoe UI", "Chrome Droid Sans", "Droid Sans Fallback", "Lucida Grande",
+    "Tahoma", sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 12pt;
   margin: 0;
@@ -10,9 +13,12 @@ html, body {
   background-color: #eee;
 }
 
-* { box-sizing: inline-block; }
+* {
+  box-sizing: inline-block;
+}
 
-#container_main {}
+#container_main {
+}
 
 #container_title {
   padding: 3px;
@@ -70,13 +76,13 @@ table {
   position: absolute;
 }
 
-
 select {
   display: block;
   margin: 0 auto;
 }
 
-#mappings {
+#mappings,
+#evalText {
   width: 100%;
   max-width: 100%;
   height: 200px;
@@ -93,8 +99,8 @@ select {
   position: fixed;
   bottom: 0;
   left: 0;
-  background-color: rgba(34,34,34,0.8);
-  box-shadow: 0 -3px 3px rgba(0,0,0,0.5);
+  background-color: rgba(34, 34, 34, 0.8);
+  box-shadow: 0 -3px 3px rgba(0, 0, 0, 0.5);
   width: 100%;
   box-sizing: border-box;
   text-align: left;
@@ -102,23 +108,29 @@ select {
   z-index: 999;
 }
 
-#save_button, #reset_button {
+#save_button,
+#reset_button {
   font-size: 10pt;
   border: 1px solid #777;
   border-radius: 2px;
   height: 35px;
 }
-#clearHistory, #gistSync {
+#clearHistory,
+#gistSync {
   border: 1px solid #777;
   border-radius: 2px;
   height: 25px;
   margin-left: 10px;
 }
-#save_button, #reset_button, #clearHistory, #gistSync {
+#save_button,
+#reset_button,
+#clearHistory,
+#gistSync {
   background-color: #bbb;
 }
 
-#save_button:hover, #reset_button:hover {
+#save_button:hover,
+#reset_button:hover {
   opacity: 1;
 }
 
@@ -141,7 +153,8 @@ a {
   position: absolute;
 }
 
-textarea, input {
+textarea,
+input {
   opacity: 0.8;
   color: #000;
   border: none;
@@ -149,6 +162,9 @@ textarea, input {
   box-sizing: border-box;
 }
 
-textarea:hover, input:hover, textarea:focus, input:focus {
+textarea:hover,
+input:hover,
+textarea:focus,
+input:focus {
   opacity: 1;
 }
