--- a/content_scripts/main.css
+++ b/content_scripts/main.css
@@ -21,9 +21,15 @@
 }
 
 @keyframes scale {
-  0%   { transform: scale(0)   perspective(1px); }
-  60%  { transform: scale(1.15) perspective(1px); }
-  100% { transform: scale(1)   perspective(0px); }
+  0% {
+    transform: scale(0) perspective(1px);
+  }
+  60% {
+    transform: scale(1.15) perspective(1px);
+  }
+  100% {
+    transform: scale(1) perspective(0px);
+  }
 }
 
 .cVim-link-hint_match {
@@ -65,14 +71,41 @@
 }
 
 .cVim-highlight {
-  min-height: 0 !important;background-repeat: none !important;background-position: none !important;border-radius: 0 !important;outline: 0 !important;border: 0 !important;text-shadow: none !important;outline: 0 !important;outline-style: none !important;
+  min-height: 0 !important;
+  background-repeat: none !important;
+  background-position: none !important;
+  border-radius: 0 !important;
+  outline: 0 !important;
+  border: 0 !important;
+  text-shadow: none !important;
+  outline: 0 !important;
+  outline-style: none !important;
   background-color: yellow;
   padding: 0 !important;
   margin: 0 !important;
 }
 
 #cVim-hud {
-  min-height: 0 !important;background-repeat: none !important;background-position: none !important;border-radius: 0 !important;box-sizing: border-box !important;vertical-align: none !important;box-shadow: none !important;margin: 0 !important;-webkit-appearance: none !important;letter-spacing: normal !important;word-spacing: normal !important;text-transform: none !important;text-indent: 0px !important;text-shadow: none !important;text-align: start !important;outline: 0 !important;border: 0 !important;outline-style: none !important;line-height: 1 !important; font-style: normal !important;
+  min-height: 0 !important;
+  background-repeat: none !important;
+  background-position: none !important;
+  border-radius: 0 !important;
+  box-sizing: border-box !important;
+  vertical-align: none !important;
+  box-shadow: none !important;
+  margin: 0 !important;
+  -webkit-appearance: none !important;
+  letter-spacing: normal !important;
+  word-spacing: normal !important;
+  text-transform: none !important;
+  text-indent: 0px !important;
+  text-shadow: none !important;
+  text-align: start !important;
+  outline: 0 !important;
+  border: 0 !important;
+  outline-style: none !important;
+  line-height: 1 !important;
+  font-style: normal !important;
   bottom: 0;
   display: inline-block !important;
   vertical-align: middle !important;
@@ -87,7 +120,25 @@
 }
 
 #cVim-status-bar {
-  min-height: 0 !important;background-repeat: none !important;background-position: none !important;border-radius: 0 !important;box-sizing: content-box !important;vertical-align: none !important;outline: 0 !important;border: 0 !important;-webkit-appearance: none !important;letter-spacing: normal !important;word-spacing: normal !important;text-transform: none !important;text-indent: 0px !important;text-shadow: none !important;text-align: start !important;outline: 0 !important;margin: 0 !important;outline-style: none !important;font-style: normal !important;
+  min-height: 0 !important;
+  background-repeat: none !important;
+  background-position: none !important;
+  border-radius: 0 !important;
+  box-sizing: content-box !important;
+  vertical-align: none !important;
+  outline: 0 !important;
+  border: 0 !important;
+  -webkit-appearance: none !important;
+  letter-spacing: normal !important;
+  word-spacing: normal !important;
+  text-transform: none !important;
+  text-indent: 0px !important;
+  text-shadow: none !important;
+  text-align: start !important;
+  outline: 0 !important;
+  margin: 0 !important;
+  outline-style: none !important;
+  font-style: normal !important;
   position: fixed !important;
   z-index: 2147483647 !important;
   background-color: #1b1d1e !important;
@@ -97,19 +148,59 @@
   padding-left: 2px;
   padding-top: 2px;
   box-sizing: border-box !important;
-  box-shadow: 0 3px 3px rgba(0,0,0,0.4);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
   left: 0 !important;
   width: 100% !important;
   height: 20px !important;
 }
 
 .cVim-error {
-  min-height: 0 !important;background-repeat: none !important;background-position: none !important;border-radius: 0 !important;box-sizing: content-box !important;vertical-align: none !important;box-shadow: none !important;margin: 0 !important;-webkit-appearance: none !important;letter-spacing: normal !important;word-spacing: normal !important;text-transform: none !important;text-indent: 0px !important;text-shadow: none !important;text-align: start !important;outline: 0 !important;border: 0 !important;outline-style: none !important;line-height: 1 !important; font-style: normal !important;
+  min-height: 0 !important;
+  background-repeat: none !important;
+  background-position: none !important;
+  border-radius: 0 !important;
+  box-sizing: content-box !important;
+  vertical-align: none !important;
+  box-shadow: none !important;
+  margin: 0 !important;
+  -webkit-appearance: none !important;
+  letter-spacing: normal !important;
+  word-spacing: normal !important;
+  text-transform: none !important;
+  text-indent: 0px !important;
+  text-shadow: none !important;
+  text-align: start !important;
+  outline: 0 !important;
+  border: 0 !important;
+  outline-style: none !important;
+  line-height: 1 !important;
+  font-style: normal !important;
 }
 
 #cVim-cursor {
-  min-height: 0 !important;background-repeat: none !important;background-position: none !important;border-radius: 0 !important;box-sizing: content-box !important;vertical-align: none !important;box-shadow: none !important;margin: 0 !important;-webkit-appearance: none !important;letter-spacing: normal !important;word-spacing: normal !important;text-transform: none !important;text-indent: 0px !important;text-shadow: none !important;text-align: start !important;outline: 0 !important;border: 0 !important;outline-style: none !important;line-height: 1 !important; font-style: normal !important;
-  position: fixed !important; background: none !important; background-image: none !important;
+  min-height: 0 !important;
+  background-repeat: none !important;
+  background-position: none !important;
+  border-radius: 0 !important;
+  box-sizing: content-box !important;
+  vertical-align: none !important;
+  box-shadow: none !important;
+  margin: 0 !important;
+  -webkit-appearance: none !important;
+  letter-spacing: normal !important;
+  word-spacing: normal !important;
+  text-transform: none !important;
+  text-indent: 0px !important;
+  text-shadow: none !important;
+  text-align: start !important;
+  outline: 0 !important;
+  border: 0 !important;
+  outline-style: none !important;
+  line-height: 1 !important;
+  font-style: normal !important;
+  position: fixed !important;
+  background: none !important;
+  background-image: none !important;
   left: 0 !important;
   width: 100% !important;
   top: 0 !important;
@@ -145,7 +236,8 @@
 }
 
 .cVim-completion-item[active] {
-  width: 100%; left: 0;
+  width: 100%;
+  left: 0;
   color: #1b1d1e;
   background-color: #f1f1f1;
 }
