--- a/content_scripts/main.css
+++ b/content_scripts/main.css
@@ -246,3 +246,21 @@
   color: #1b1d1e;
 }
 /* }} Delete these later */
+
+#cVim-hateb-comment {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  text-align: center;
+  padding: 0px 5px 0px 5px;
+  font-size: 10px;
+  z-index: 100000;
+}
+
+#cVim-hateb-comment thead th {
+  position: sticky;
+  top: 0;
+}
